oauth2 server - run with docker configuration

--- a/mall-eureka-server/pom.xml
+++ b/mall-eureka-server/pom.xml
@@ -60,7 +60,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.millinch.cloud.EurekaApplication</mainClass>
+                    <mainClass>com.millinch.mall.cloud.EurekaApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
