--- a/sample/src/main/resources/application.yml
+++ b/sample/src/main/resources/application.yml
@@ -21,8 +21,8 @@ security:
     password: none
   oauth2:
     client:
-      accessTokenUri: http://localhost:9999/oauth/token
-      userAuthorizationUri: http://localhost:9999/oauth/authorize
+      accessTokenUri: http://localhost:9999/sso/oauth/token
+      userAuthorizationUri: http://localhost:9999/sso/oauth/authorize
       clientId: mall-sample-client
       clientSecret: 123456
     resource:
