--- a/mall-dependencies/pom.xml
+++ b/mall-dependencies/pom.xml
@@ -2,20 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>mall</artifactId>
-        <groupId>com.millinch</groupId>
-        <version>1.0-alpha-1</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>mall-dependencies</artifactId>
+    <modules>
+        <module>mall-thrift-dependencies</module>
+        <module>mall-dao-dependencies</module>
+    </modules>
+    <groupId>com.millinch</groupId>
+    <version>1.0-alpha-1</version>
+    <packaging>pom</packaging>
 
     <properties>
         <encoding>UTF-8</encoding>
         <java.version>1.7</java.version>
-        <spring.version>4.1.6.RELEASE</spring.version>
+        <spring.version>4.3.4.RELEASE</spring.version>
         <mybatis.version>3.4.1</mybatis.version>
         <mybatis-spring>1.3.0</mybatis-spring>
         <mybatis-plus.version>1.4.9</mybatis-plus.version>
@@ -42,6 +43,7 @@
         <spring-cloud-starter-kubernetes.version>0.1.4</spring-cloud-starter-kubernetes.version>
         <spring-cloud-dependencies.version>Camden.SR3</spring-cloud-dependencies.version>
         <spring-security.version>4.1.1.RELEASE</spring-security.version>
+        <junit.version>4.12</junit.version>
     </properties>
 
     <dependencyManagement>
@@ -95,7 +97,13 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.11</version>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${spring.version}</version>
                 <scope>test</scope>
             </dependency>
 
