--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,155 +1,47 @@
-version: "2"
-
+# https://github.com/camptocamp/docker-consul-demo
+# One max per physical node
+version: '2'
 services:
-  peer1:
-    image: millinch/mall-eureka-server:latest
-    mem_limit: 1000000000
-    networks:
-      - host
-    ports:
-      - 1111:1111
-    expose:
-      - 1111
-    volumes:
-      - /tmp:/tmp
+  lb:
+    image: camptocamp/haproxy-consul:latest
+    container_name: 'load-balancer'
     environment:
-      - SPRING_PROFILES_ACTIVE=peer1
-      - JAVA_OPTS="-Xms128m -Xmx512m"
-#    links:
-#      - peer2
-    command: bash -c "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
+      HAPROXY_DOMAIN: '127.0.0.1.xip.io:test'
+      SERVICE_80_IGNORE: 'yes'
+      SERVICE_8080_NAME: 'proxy-admin_infra'
+    ports:
+      - "80:80"
+      - "8080"
+    networks:
+      - "consul-cloud-network"
 
-  peer2:
-    image: millinch/mall-eureka-server:latest
-    mem_limit: 1000000000
-    networks:
-      - host
+  # Only one for the whole cluster
+  consul:
+    command: -server -bootstrap
+    image: progrium/consul:latest
+    container_name: 'consul'
     ports:
-      - 1112:1112
-    expose:
-      - 1112
-    volumes:
-      - /tmp:/tmp
+      - "8500:8500"
+    networks:
+      - "consul-cloud-network"
     environment:
-      - SPRING_PROFILES_ACTIVE=peer2
-      - JAVA_OPTS="-Xms128m -Xmx512m"
-    command: bash -c "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
-#   links:
-#     - peer1
+      SERVICE_53_IGNORE: 'yes'
+      SERVICE_8300_IGNORE: 'yes'
+      SERVICE_8301_IGNORE: 'yes'
+      SERVICE_8302_IGNORE: 'yes'
+      SERVICE_8400_IGNORE: 'yes'
+      SERVICE_8500_NAME: 'consul-admin_infra'
+
+  # Exactly one per physical node
+  registrator:
+    command: "-internal consul://consul:8500"
+    image: gliderlabs/registrator:latest
+    container_name: 'registrator'
+    networks:
+      - "consul-cloud-network"
+    volumes:
+      - "/var/run/docker.sock:/tmp/docker.sock"
 
 networks:
-  host:
+  consul-cloud-network:
     driver: bridge
-
-#config-service:
-#    mem_limit: 1000000000
-#    image: yingzhuo/microservice-config-service:latest
-#    ports:
-#      - 8888:8888
-#    volumes:
-#      - /tmp:/tmp
-#      - /home/yingzhuo/projects/spring-cloud-microservice-example/config-repo:/root/spring-cloud-microservice-example-config-repo
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=docker,native
-#      - JAVA_OPTS="-Xms5000m -Xmx10000m"
-#    links:
-#      - discovery
-#    command: bash -c "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
-#
-#drama-service-a:
-#  mem_limit: 1000000000
-#  image: yingzhuo/microservice-drama-service:latest
-#  ports:
-#    - 7779:7779
-#  volumes:
-#    - /tmp:/tmp
-#  environment:
-#    - SPRING_PROFILES_ACTIVE=docker,security
-#    - SERVER_PORT=7779
-#    - JAVA_OPTS="-Xms5000m -Xmx10000m"
-#  links:
-#    - discovery
-#    - config-service
-#  entrypoint: dockerize -wait tcp://discovery:8761 -timeout 3600s
-#  entrypoint: dockerize -wait tcp://config-service:8888 -timeout 3600s
-#  command: bash -c "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
-#
-#drama-service-b:
-#  mem_limit: 1000000000
-#  image: yingzhuo/microservice-drama-service:latest
-#  ports:
-#    - 7780:7780
-#  volumes:
-#    - /tmp:/tmp
-#  environment:
-#    - SPRING_PROFILES_ACTIVE=docker,security
-#    - SERVER_PORT=7780
-#    - JAVA_OPTS="-Xms5000m -Xmx10000m"
-#  links:
-#    - discovery
-#    - config-service
-#  entrypoint: dockerize -wait tcp://discovery:8761 -timeout 3600s
-#  entrypoint: dockerize -wait tcp://config-service:8888 -timeout 3600s
-#  command: bash -c "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
-#
-#api-gateway:
-#  mem_limit: 1000000000
-#  image: yingzhuo/microservice-api-gateway:latest
-#  ports:
-#    - 5555:5555
-#  volumes:
-#    - /tmp:/tmp
-#  environment:
-#    - SPRING_PROFILES_ACTIVE=docker,security
-#    - JAVA_OPTS="-Xms5000m -Xmx10000m"
-#  links:
-#    - discovery
-#    - drama-service-a
-#    - drama-service-b
-#  command: bash -c "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
-#
-#ui:
-#  mem_limit: 1000000000
-#  image: yingzhuo/microservice-ui:latest
-#  ports:
-#    - 8866:8866
-#  volumes:
-#    - /tmp:/tmp
-#  environment:
-#    - SPRING_PROFILES_ACTIVE=docker
-#    - JAVA_OPTS="-Xms5000m -Xmx10000m"
-#  links:
-#    - discovery
-#    - api-gateway
-#  entrypoint: dockerize -wait tcp://discovery:8761 -timeout 3600s
-#  command: bash -c "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
-#
-#hystrix-dashboard:
-#  mem_limit: 1000000000
-#  image: yingzhuo/microservice-hystrix-dashboard:latest
-#  ports:
-#    - 8030:8030
-#  volumes:
-#    - /tmp:/tmp
-#  environment:
-#    - SPRING_PROFILES_ACTIVE=docker
-#    - JAVA_OPTS="-Xms5000m -Xmx10000m"
-#  links:
-#    - discovery
-#  entrypoint: dockerize -wait tcp://discovery:8761 -timeout 3600s
-#  command: bash -c "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
-#
-#hystrix-turbine:
-#  mem_limit: 1000000000
-#  image: yingzhuo/microservice-hystrix-turbine:latest
-#  ports:
-#    - 8031:8031
-#  volumes:
-#    - /tmp:/tmp
-#  environment:
-#    - SPRING_PROFILES_ACTIVE=docker
-#    - JAVA_OPTS="-Xms5000m -Xmx10000m"
-#  links:
-#    - discovery
-#  entrypoint: dockerize -wait tcp://discovery:8761 -timeout 3600s
-#  command: bash -c "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
