account - add columns

--- a/account-module/account-restful-api/src/main/resources/application.yml
+++ b/account-module/account-restful-api/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://${MYSQL_URL_DOCKER:localhost:13306}/mall_oauth2?useUnicode=true&characterEncoding=UTF-8
     username: root
-    password: root
+    password: 14yhl9t
 #    druid:
 #      properties:
 #        driverClassName: com.mysql.jdbc.Driver
