--- a/mall-admin-gateway/src/main/resources/application.yml
+++ b/mall-admin-gateway/src/main/resources/application.yml
@@ -29,9 +29,9 @@ security:
 #    enabled: false
   oauth2:
     client:
-      accessTokenUri: http://localhost:${server.port}/sso/oauth/token
-      userAuthorizationUri: http://localhost:${server.port}/sso/oauth/authorize
-      clientId: mall-sample-client
+      accessTokenUri: http://localhost:9999/sso/oauth/token
+      userAuthorizationUri: http://localhost:9999/sso/oauth/authorize
+      clientId: mall-admin-gateway-client
       clientSecret: 123456
     resource:
       jwt:
