--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,7 @@
-# https://github.com/camptocamp/docker-consul-demo
-# One max per physical node
-version: '2'
-services:
-  lb:
-    image: camptocamp/haproxy-consul:latest
-    container_name: 'load-balancer'
-    environment:
-      HAPROXY_DOMAIN: '127.0.0.1.xip.io:test'
-      SERVICE_80_IGNORE: 'yes'
-      SERVICE_8080_NAME: 'proxy-admin_infra'
-    ports:
-      - "80:80"
-      - "8080"
-    networks:
-      - "consul-cloud-network"
-
-  # Only one for the whole cluster
-  consul:
-    command: -server -bootstrap
-    image: progrium/consul:latest
-    container_name: 'consul'
-    ports:
-      - "8500:8500"
-    networks:
-      - "consul-cloud-network"
-    environment:
-      SERVICE_53_IGNORE: 'yes'
-      SERVICE_8300_IGNORE: 'yes'
-      SERVICE_8301_IGNORE: 'yes'
-      SERVICE_8302_IGNORE: 'yes'
-      SERVICE_8400_IGNORE: 'yes'
-      SERVICE_8500_NAME: 'consul-admin_infra'
-
-  # Exactly one per physical node
-  registrator:
-    command: "-internal consul://consul:8500"
-    image: gliderlabs/registrator:latest
-    container_name: 'registrator'
-    networks:
-      - "consul-cloud-network"
-    volumes:
-      - "/var/run/docker.sock:/tmp/docker.sock"
-
-networks:
-  consul-cloud-network:
-    driver: bridge
+# As many as wanted
+web:
+  image: tutum/hello-world
+  environment:
+    SERVICE_NAME: 'www-hello'
+    SERVICE_CHECK_HTTP: '/'
+    SERVICE_CHECK_INTERVAL: '5s'
