--- a/database.yml
+++ b/database.yml
@@ -7,14 +7,14 @@ services:
     ports:
       - "16379:6379"
     networks:
-      - "oauth2-network"
+      - "consul-cloud-network"
 
 #MySQL
   OAuth2MySQL:
     container_name: "oauth2-mysql"
     image: mysql
     networks:
-      - "oauth2-network"
+      - "consul-cloud-network"
     ports:
       - "13306:3306"
     environment:
@@ -31,7 +31,7 @@ services:
 #    ports:
 #      - "9999:80"
 #    networks:
-#      - "oauth2-network"
+#      - "consul-cloud-network"
 #    volumes:
 #      - $HOME/.mall_docker_volumes/nginx/:/etc/nginx/conf.d/
 #    environment:
@@ -43,7 +43,7 @@ services:
 #    ports:
 #      - "9999:9999"
 #    networks:
-#      - "oauth2-network"
+#      - "consul-cloud-network"
 #    environment:
 #      - JAVA_OPTS="-Xms128m -Xmx512m"
 #      - MYSQL_URL_DOCKER=oauth2-mysql:3306
@@ -51,5 +51,5 @@ services:
 #      - REDIS_PORT_DOCKER=6379
 #    command: bash -c "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
 networks:
-  oauth2-network:
+  consul-cloud-network:
     driver: bridge
