--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -48,6 +48,14 @@
             <artifactId>spring-cloud-starter-oauth2</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.millinch</groupId>
             <artifactId>spring-boot-druid-starter</artifactId>
             <version>1.0-alpha-1</version>
