--- a/mall-dependencies/pom.xml
+++ b/mall-dependencies/pom.xml
@@ -17,8 +17,8 @@
         <encoding>UTF-8</encoding>
         <java.version>1.7</java.version>
         <spring.version>4.3.4.RELEASE</spring.version>
-        <mybatis.version>3.4.1</mybatis.version>
-        <mybatis-spring>1.3.0</mybatis-spring>
+        <mybatis.version>3.4.2</mybatis.version>
+        <mybatis-spring>1.3.1</mybatis-spring>
         <mybatis-plus.version>2.0.2</mybatis-plus.version>
         <druid.version>1.0.15</druid.version>
         <slf4j.version>1.7.7</slf4j.version>
@@ -28,7 +28,7 @@
         <commons-collections.version>3.2.1</commons-collections.version>
         <commons-io.version>2.4</commons-io.version>
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
-        <logback-classic.version>1.1.2</logback-classic.version>
+        <logback-classic.version>1.2.1</logback-classic.version>
         <mysql-connector-java.version>5.1.27</mysql-connector-java.version>
         <pagehelper.version>4.0.0</pagehelper.version>
         <jsqlparser.version>0.9.1</jsqlparser.version>
@@ -99,6 +99,17 @@
                         <artifactId>slf4j-api</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback-classic.version}</version>
             </dependency>
 
             <!-- JUnit -->
