--- a/consul.yml
+++ b/consul.yml
@@ -2,18 +2,18 @@
 # One max per physical node
 version: '2'
 services:
-  lb:
-    image: camptocamp/haproxy-consul:latest
-    container_name: 'load-balancer'
-    environment:
-      HAPROXY_DOMAIN: '127.0.0.1.xip.io:test'
-      SERVICE_80_IGNORE: 'yes'
-      SERVICE_8080_NAME: 'proxy-admin_infra'
-    ports:
-      - "80:80"
-      - "8080"
-    networks:
-      - "consul-cloud-network"
+#  lb:
+#    image: camptocamp/haproxy-consul:latest
+#    container_name: 'load-balancer'
+#    environment:
+#      HAPROXY_DOMAIN: '127.0.0.1.xip.io:test'
+#      SERVICE_80_IGNORE: 'yes'
+#      SERVICE_8080_NAME: 'proxy-admin_infra'
+#    ports:
+#      - "80:80"
+#      - "8080"
+#    networks:
+#      - "consul-cloud-network"
 
   # Only one for the whole cluster
   consul:
@@ -33,14 +33,16 @@ services:
       SERVICE_8500_NAME: 'consul-admin_infra'
 
   # Exactly one per physical node
-  registrator:
-    command: "-internal consul://consul:8500"
-    image: gliderlabs/registrator:latest
-    container_name: 'registrator'
-    networks:
-      - "consul-cloud-network"
-    volumes:
-      - "/var/run/docker.sock:/tmp/docker.sock"
+#  registrator:
+#    command: "-internal consul://consul:8500"
+#    image: gliderlabs/registrator:latest
+#    container_name: 'registrator'
+#    depends_on:
+#      - consul
+#    networks:
+#      - "consul-cloud-network"
+#    volumes:
+#      - "/var/run/docker.sock:/tmp/docker.sock"
 
 networks:
   consul-cloud-network:
