--- a/database.yml
+++ b/database.yml
@@ -24,6 +24,8 @@ services:
       - $HOME/.millimall/mall-docker-volumes/mysql/data/:/var/lib/mysql
     command:
       [mysqld, --character-set-server=utf8mb4, --collation-server=utf8mb4_unicode_ci]
+
+#RabbitMQ
   RabbitMQ:
     container_name: "rabbitmq"
     image: rabbitmq:3-management
