--- a/database.yml
+++ b/database.yml
@@ -29,6 +29,8 @@ services:
   RabbitMQ:
     container_name: "rabbitmq"
     image: rabbitmq:3-management
+    networks:
+      - "consul-cloud-network"
     ports:
       - "5672:5672"
       - "15672:15672"
