admin-gateway: pure admin api gateway without oauth2 integration

--- a/mall-admin-gateway/src/main/resources/application-dev.yml
+++ b/mall-admin-gateway/src/main/resources/application-dev.yml
@@ -7,12 +7,11 @@ zuul:
     goods:
       sensitiveHeaders:
       path: /goods/**
-      serviceId: goods-restful-api
+      url: http://localhost:8080
     oauth2:
       sensitiveHeaders:
       path: /sso/**
-      serviceId: oauth2-server
-      stripPrefix: false
+      url: http://localhost:9999/sso
 
 spring:
   application:
