admin-gateway: ignore CORS headers

--- a/mall-admin-gateway/src/main/resources/application-dev.yml
+++ b/mall-admin-gateway/src/main/resources/application-dev.yml
@@ -12,6 +12,12 @@ zuul:
       sensitiveHeaders:
       path: /sso/**
       url: http://localhost:9999/sso
+      strip-prefix: true
+  add-proxy-headers: true
+  ignored-headers: Access-Control-Allow-Origin,
+                   Access-Control-Allow-Methods,
+                   Access-Control-Allow-Headers,
+                   Access-Control-Max-Age
 
 spring:
   application:
