--- a/mall-admin-ui/package.json
+++ b/mall-admin-ui/package.json
@@ -17,6 +17,7 @@
     "element-ui": "^1.1.6",
     "vue": "^2.1.10",
     "vue-router": "^2.2.0",
+    "vuedraggable": "^2.9.0",
     "vuex": "^2.1.2"
   },
   "devDependencies": {
